--- a/blocks/content/__places/content__places.css
+++ b/blocks/content/__places/content__places.css
@@ -1,18 +1,18 @@
-.places_position {
+.content__places {
     margin: 92px auto;
   }
 @media (min-width : 768px) and (max-width : 1023px) {
-    .places_position {
+    .content__places {
         margin: 88px auto;
       }
     }
 @media (max-width : 767px) {
-    .places_position {
+    .content__places {
         margin: 64px auto;
       }
     }
 @media (min-width : 1024px) and (max-width : 1279px) {
-    .places_position {
+    .content__places {
         padding-left: 48px;
         padding-right: 48px;
       }
