--- a/blocks/content/__intro/content__intro.css
+++ b/blocks/content/__intro/content__intro.css
@@ -1,19 +1,19 @@
-.intro_position {
+.content__intro {
     margin: auto;
     margin-top: 114px;
 }
 @media (min-width : 768px) and (max-width : 1023px) {
-    .intro_position {
+    .content__intro {
        margin-top: 110px;
         }
    }
 @media (max-width : 767px) {
-    .intro_position {
+    .content__intro {
         margin-top: 86px;
         }
     }
 @media (min-width : 1024px) and (max-width : 1279px) {
-    .intro_position {
+    .content__intro {
         max-width: 928px;
         }
     }
