--- a/blocks/content/__photo-grid/content__photo-grid.css
+++ b/blocks/content/__photo-grid/content__photo-grid.css
@@ -1,15 +1,15 @@
-.photo-grid_position {
+.content__photo-grid {
     margin: auto;
     margin-top: 92px;
 }
 @media (min-width : 768px) and (max-width : 1023px) {
-    .photo-grid_position {
+    .content__photo-grid {
       margin-left: 24px;
       margin-right: 24px;
     }
   }
 @media (max-width : 767px) {
-    .photo-grid_position {
+    .content__photo-grid {
       margin-top: 64px;
     }         
 }
