--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,12 +1,57 @@
 .cover__link {
+    position: relative;
+    max-width: 1180px;
+    min-height: 740px;
+    text-decoration: none;
+    background-image: url(../../../images/cover-trains.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 0;
+    margin: auto;
+  }
+
+  .cover__link::before {
+    content: '';
+    display: block;
     position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-decoration: none;
+    opacity: .3;
+    background-color: #2A2C2F
+ 
   }
+  .cover__link:hover::before {
+    opacity: .3;
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    opacity: .8;
+    background-color: #2A2C2F;
+  }
+  @media (min-width : 1024px) and (max-width : 1279px) {
+    .cover__link {
+      max-width: 1024px;
+      min-height: 640px;
+    }
+  }
+  @media (min-width : 768px) and (max-width : 1023px) {
+    .cover__link {
+      max-width: 768px;
+      min-height: 480px;
+    }
+  }
+  @media (max-width : 767px) {
+    .cover__link {
+      max-width: 320px;
+      min-height: 200px;
+    }
