--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -7,6 +7,7 @@
     font-size: 18px;
     line-height: 22px;
     text-align: center;
+    z-index: 10;
   }
 @media (max-width : 767px) {
   .cover__subtitle {
