--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -7,6 +7,7 @@
     font-size: 72px;
     line-height: 76px;
     text-align: center;
+    z-index: 10;
   }
 @media (max-width : 767px) {
     .cover__title {
