--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -9,7 +9,7 @@
 .header__lang-link:hover {
     opacity: 0.7;
   }
-  .header__lang-link:nth-child(2) {
+  .header__lang-link:last-child {
     margin-right: 0;
   }
   @media (max-width : 767px) {
