--- a/blocks/page/__header/page__header.css
+++ b/blocks/page/__header/page__header.css
@@ -1,4 +1,4 @@
-.header_position {
+.page__header {
     margin: auto;
     padding-top: 28px;
     margin-bottom: 56px;
@@ -8,12 +8,12 @@
     align-items: flex-end;
   }
 @media (max-width : 1279px) {
-    .header_position {
+    .page__header {
         margin-bottom: 48px;
       }
     }
 @media (max-width : 767px) {
-    .header_position {
+    .page__header {
         padding-top: 16px;
       }
     }
