--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,18 +1,19 @@
 .place__title {
-    font-family: Inter;
     font-style: normal;
     font-weight: 900;
     font-size: 72px;
     line-height: 76px;
     color: #FFFFFF;
     margin: auto;
-    margin-left: 0;
+    margin: 0;
+    align-self: end;
   }
 @media (max-width : 767px) {
     .place__title {
         font-size: 32px;
         line-height: 35px;
         max-width: 288px;
+        padding-left: 16px;
         }
     }
 @media (min-width : 768px) and (max-width : 1023px) {
