--- a/blocks/places/__place/places__place.css
+++ b/blocks/places/__place/places__place.css
@@ -1,18 +1,16 @@
-.place_position {
+.places__place {
     margin-bottom: 80px;
   }
-.place_position:nth-child(5) {
+.places__place:last-child {
     margin-bottom: 0;
   }
 @media (min-width : 768px) and (max-width : 1023px) {
-    .place_position {
+    .places__place {
       margin-bottom: 72px;
-      padding-left: 24px;
-      padding-right: 24px;
     }
 }
 @media (max-width : 767px) {
-    .place_position {
+    .places__place {
         margin: auto;
         margin-bottom: 48px;
       }
