Проектная работа 3. Версия 3

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,9 +1,13 @@
 .header {
     max-width: 1184px;
+    display: flex;
+    position: relative;
+    justify-content: space-between;
+    align-items: flex-end;
   }
   @media (max-width : 767px) {
     .header {
-        max-width: 288px;
+        width: 288px;
       }
     }
 @media (min-width : 1024px) and (max-width : 1279px) {
