--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -12,3 +12,8 @@
         max-width: 288px;
       }
     }
+@media (min-width : 1024px) and (max-width : 1279px) {
+      .content__intro {
+          max-width: 928px;
+          }
+      }
