--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,5 +1,9 @@
 .lead {
     max-width: 984px; 
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    align-items: center;
 }
 @media (min-width : 1024px) and (max-width : 1279px) {
     .lead {
